--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Work In Progress...</h1>
     <h2>i'll get to this eventually...</h2>
-    <img src= hatred.png alt= ":)">
+    <img src= "hatred.png" alt= ":)">
 </html>
