--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-    <h1>Work In Progress...</h1>
-    <h2>i'll get to this eventually...</h2>
-    <img src= "hatred.png" alt= ":)">
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Work In Progress...</h1>
+        <h2>i'll get to this eventually...</h2>
+        <img src= "hatred.png" alt= ":)">
+    </body>
 </html>
