--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
         <h1>Work In Progress...</h1>
         <h2>i'll get to this eventually...</h2>
-        <img src= "hatred.png" alt= ":)">
+        <img src= "hatred.png" alt= ":)" border= 2px solid #889ebf>
     </body>
 </html>
