--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Work In Progress...</h1>
-        <h2>i'll get to this eventually...</h2>
+        <h1>Hi!</h1>
+        <h2>I'm Carly!! I'm a Computer Science major and this is my website!</h2>
         <img src= "hatred.png" alt= ":)" style= "border: 4px #889ebf solid">
     </body>
 </html>
