--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Carly's Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
